--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
-<h1>ngx-openlayer demo</h1>
+<h1>OpenLayers Plugin Architecture demo</h1>
 
 <nav>
-  <a routerLink="/basic" routerLinkActive="active">Basic</a>
-  <a routerLink="/cluster" routerLinkActive="active">Cluster</a>
-  <a routerLink="/raster" routerLinkActive="active">Raster</a>
+  <a routerLink="/map" routerLinkActive="active">Basic</a>
+  <a routerLink="/map/draw" routerLinkActive="active">Draw</a>
 </nav>
 
 <router-outlet></router-outlet>
